--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,25 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "dropzone": "^6.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@types/dropzone": "^5.7.4",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "@wixc3/react-board": "^2.2.0",
-    "sass": "^1.62.0",
+    "sass": "^1.62.1",
     "typescript": "^5.0.4",
     "vite": "^4.2.1"
   }
