--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.3",
     "classnames": "^2.3.2",
     "dropzone": "^6.0.0-beta.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/dropzone": "^5.7.4",
+    "@types/node": "^20.1.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
