--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@types/js-cookie": "^3.0.3",
     "classnames": "^2.3.2",
     "dropzone": "^6.0.0-beta.2",
@@ -16,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "socket.io-client": "^4.6.1",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
