--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "classnames": "^2.3.2",
     "dropzone": "^6.0.0-beta.2",
     "js-cookie": "^3.0.5",
+    "prism-react-renderer": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-markdown": "^8.0.7",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^6.0.3",
+    "remark-math": "^5.1.1",
     "socket.io-client": "^4.6.1",
     "vite-plugin-svgr": "^2.4.0"
   },
@@ -25,6 +30,7 @@
     "@types/node": "^20.1.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@vitejs/plugin-react": "^3.1.0",
     "@wixc3/react-board": "^2.2.0",
     "sass": "^1.62.1",
