--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rehype-katex": "^6.0.3",
     "remark-math": "^5.1.1",
     "socket.io-client": "^4.6.1",
+    "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@wixc3/react-board": "^2.2.0",
     "sass": "^1.62.1",
