--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
     "@types/js-cookie": "^3.0.3",
+    "@vercel/analytics": "^1.0.1",
     "classnames": "^2.3.2",
     "dropzone": "^6.0.0-beta.2",
     "js-cookie": "^3.0.5",
