--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dropzone": "^14.2.3",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.4.1",
     "rehype-katex": "^6.0.3",
     "remark-math": "^5.1.1",
     "socket.io-client": "^4.6.1",
