--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://127.0.0.1:8000
-# VITE_API_URL=https://papyrion.herokuapp.com
+# VITE_API_URL=http://127.0.0.1:8000
+VITE_API_URL=https://papyrion.herokuapp.com
